fix Team spacing

--- a/styles.css
+++ b/styles.css
@@ -597,6 +597,10 @@ p {
     list-style: none;
     height: fit-content;
     margin: .5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
 }
 
 .team-img {
